--- a/projects.html
+++ b/projects.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
-    <title>My Projects</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="description" content="[Your Name] - Projects">
+    <title>Projects - [Your Name]</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Header -->
     <header>
         <nav>
             <ul>
@@ -20,40 +23,23 @@
         </nav>
     </header>
 
+    <!-- Projects Section -->
     <section id="projects">
-        <h1>My Projects</h1>
-        <div class="carousel-container">
-            <div id="projectCarousel" class="carousel-slide">
-                <div class="carousel-item">
-                    <img src="assets/images/project1.jpg" alt="Project 1">
-                    <p>Project 1 Description</p>
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/images/project2.jpg" alt="Project 2">
-                    <p>Project 2 Description</p>
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/images/project3.jpg" alt="Project 3">
-                    <p>Project 3 Description</p>
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/images/project4.jpg" alt="Project 4">
-                    <p>Project 4 Description</p>
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/images/project5.jpg" alt="Project 5">
-                    <p>Project 5 Description</p>
-                </div>
+        <h2>Projects</h2>
+        <div class="projects-grid">
+            <div class="project-card">
+                <img src="https://via.placeholder.com/400x200" alt="Project Image">
+                <h3>Project 1</h3>
+                <p>Short description of the project...</p>
             </div>
-            <button id="projectPrev">Prev</button>
-            <button id="projectNext">Next</button>
+            <!-- Repeat for other projects -->
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
     </footer>
 
-    <script src="assets/js/script.js"></script>
 </body>
 </html>
