--- a/writing.html
+++ b/writing.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
-    <title>My Writing</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="description" content="[Your Name] - Writing">
+    <title>Writing - [Your Name]</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Header -->
     <header>
         <nav>
             <ul>
@@ -20,40 +23,23 @@
         </nav>
     </header>
 
+    <!-- Writing Section -->
     <section id="writing">
-        <h1>My Writing</h1>
-        <div class="carousel-container">
-            <div id="writingCarousel" class="carousel-slide">
-                <div class="writing-slide">
-                    <img src="assets/images/writing1.jpg" alt="Writing 1">
-                    <p>Writing Sample 1 Description</p>
-                </div>
-                <div class="writing-slide">
-                    <img src="assets/images/writing2.jpg" alt="Writing 2">
-                    <p>Writing Sample 2 Description</p>
-                </div>
-                <div class="writing-slide">
-                    <img src="assets/images/writing3.jpg" alt="Writing 3">
-                    <p>Writing Sample 3 Description</p>
-                </div>
-                <div class="writing-slide">
-                    <img src="assets/images/writing4.jpg" alt="Writing 4">
-                    <p>Writing Sample 4 Description</p>
-                </div>
-                <div class="writing-slide">
-                    <img src="assets/images/writing5.jpg" alt="Writing 5">
-                    <p>Writing Sample 5 Description</p>
-                </div>
+        <h2>Writing</h2>
+        <div class="writing-grid">
+            <div class="writing-card">
+                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
+                <h3>Writing Sample 1</h3>
+                <p>Excerpt from the writing...</p>
             </div>
-            <button id="writingPrev">Prev</button>
-            <button id="writingNext">Next</button>
+            <!-- Repeat for other writing samples -->
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
     </footer>
 
-    <script src="assets/js/script.js"></script>
 </body>
 </html>
