--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
 
     <!-- Hero Section -->
     <section id="home">
-        <h1>Hi, I'm [Your Name]</h1>
-        <p>Designing impactful digital experiences.</p>
-        <button>View My Work</button>
+        <div class="hero-content">
+            <h1>Hi, I'm [Your Name]</h1>
+            <p>Crafting seamless digital experiences through design and development.</p>
+            <button onclick="window.location.href='projects.html'">View My Work</button>
+        </div>
+    </section>
+
+    <!-- About Preview Section -->
+    <section id="about-preview">
+        <h2>About Me</h2>
+        <p>I am a passionate designer & developer creating meaningful user experiences.</p>
+        <a href="about.html" class="button">Learn More</a>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
-    </footer>
-
-</body>
-</html>
-
- 
+        <p>&copy; 2025 [Your Name]. All rights reserved
