--- a/about.html
+++ b/about.html
@@ -25,8 +25,15 @@
 
     <!-- About Section -->
     <section id="about">
-        <h1>About Me</h1>
-        <p>I'm a designer and developer passionate about creating seamless, intuitive, and meaningful digital experiences. I have worked with a variety of clients to bring their vision to life through creative problem-solving and cutting-edge technology.</p>
+        <div class="about-container">
+            <img src="https://via.placeholder.com/200" alt="Your photo" class="about-photo">
+            <div class="about-text">
+                <h1>About Me</h1>
+                <p>I'm a passionate designer and developer focused on creating intuitive, engaging digital experiences. I thrive in environments that challenge my creativity and problem-solving skills.</p>
+                <p>When I'm not working, you'll find me reading about the latest in design trends, playing the guitar, or traveling to new places to find inspiration.</p>
+                <a href="contact.html" class="button">Get in Touch</a>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
