--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,26 @@
                 <h3>Project 1</h3>
                 <p>Short description of the project...</p>
             </div>
-            <!-- Repeat for other projects -->
+            <div class="project-card">
+                <img src="https://via.placeholder.com/400x200" alt="Project Image">
+                <h3>Project 2</h3>
+                <p>Short description of the project...</p>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/400x200" alt="Project Image">
+                <h3>Project 3</h3>
+                <p>Short description of the project...</p>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/400x200" alt="Project Image">
+                <h3>Project 4</h3>
+                <p>Short description of the project...</p>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/400x200" alt="Project Image">
+                <h3>Project 5</h3>
+                <p>Short description of the project...</p>
+            </div>
         </div>
     </section>
 
