--- a/writing.html
+++ b/writing.html
@@ -29,10 +29,34 @@
         <div class="writing-grid">
             <div class="writing-card">
                 <img src="https://via.placeholder.com/400x200" alt="Writing Image">
-                <h3>Writing Sample 1</h3>
-                <p>Excerpt from the writing...</p>
+                <h3>Article Title</h3>
+                <p>Excerpt from the article...</p>
+                <a href="#" class="button">Read More</a>
             </div>
-            <!-- Repeat for other writing samples -->
+            <div class="writing-card">
+                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
+                <h3>Article Title</h3>
+                <p>Excerpt from the article...</p>
+                <a href="#" class="button">Read More</a>
+            </div>
+            <div class="writing-card">
+                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
+                <h3>Article Title</h3>
+                <p>Excerpt from the article...</p>
+                <a href="#" class="button">Read More</a>
+            </div>
+            <div class="writing-card">
+                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
+                <h3>Article Title</h3>
+                <p>Excerpt from the article...</p>
+                <a href="#" class="button">Read More</a>
+            </div>
+            <div class="writing-card">
+                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
+                <h3>Article Title</h3>
+                <p>Excerpt from the article...</p>
+                <a href="#" class="button">Read More</a>
+            </div>
         </div>
     </section>
 
