--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,12 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-        <form>
+        <p>If you'd like to collaborate or just say hello, feel free to reach out!</p>
+        <form action="#" method="POST">
             <input type="text" placeholder="Your Name" required>
             <input type="email" placeholder="Your Email" required>
             <textarea placeholder="Your Message" required></textarea>
-            <input type="submit" value="Send Message">
+            <button type="submit">Send Message</button>
         </form>
     </section>
 
