--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,8 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>If you'd like to collaborate or just say hello, feel free to reach out!</p>
+        <p>If you'd like to collaborate, discuss a project, or just say hello, feel free to reach out!</p>
+
         <form action="#" method="POST">
             <input type="text" placeholder="Your Name" required>
             <input type="email" placeholder="Your Email" required>
