--- a/projects.html
+++ b/projects.html
@@ -25,32 +25,47 @@
 
     <!-- Projects Section -->
     <section id="projects">
-        <h2>Projects</h2>
+        <h2>My Projects</h2>
         <div class="projects-grid">
+            <!-- Project 1 -->
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Project Image">
-                <h3>Project 1</h3>
-                <p>Short description of the project...</p>
+                <a href="project1.html">
+                    <img src="https://via.placeholder.com/400" alt="Project 1">
+                    <h3>Project 1</h3>
+                    <p>Project 1 description goes here.</p>
+                </a>
             </div>
+            <!-- Project 2 -->
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Project Image">
-                <h3>Project 2</h3>
-                <p>Short description of the project...</p>
+                <a href="project2.html">
+                    <img src="https://via.placeholder.com/400" alt="Project 2">
+                    <h3>Project 2</h3>
+                    <p>Project 2 description goes here.</p>
+                </a>
             </div>
+            <!-- Project 3 -->
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Project Image">
-                <h3>Project 3</h3>
-                <p>Short description of the project...</p>
+                <a href="project3.html">
+                    <img src="https://via.placeholder.com/400" alt="Project 3">
+                    <h3>Project 3</h3>
+                    <p>Project 3 description goes here.</p>
+                </a>
             </div>
+            <!-- Project 4 -->
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Project Image">
-                <h3>Project 4</h3>
-                <p>Short description of the project...</p>
+                <a href="project4.html">
+                    <img src="https://via.placeholder.com/400" alt="Project 4">
+                    <h3>Project 4</h3>
+                    <p>Project 4 description goes here.</p>
+                </a>
             </div>
+            <!-- Project 5 -->
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Project Image">
-                <h3>Project 5</h3>
-                <p>Short description of the project...</p>
+                <a href="project5.html">
+                    <img src="https://via.placeholder.com/400" alt="Project 5">
+                    <h3>Project 5</h3>
+                    <p>Project 5 description goes here.</p>
+                </a>
             </div>
         </div>
     </section>
