--- a/writing.html
+++ b/writing.html
@@ -25,37 +25,47 @@
 
     <!-- Writing Section -->
     <section id="writing">
-        <h2>Writing</h2>
+        <h2>My Writing</h2>
         <div class="writing-grid">
+            <!-- Writing 1 -->
             <div class="writing-card">
-                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
-                <h3>Article Title</h3>
-                <p>Excerpt from the article...</p>
-                <a href="#" class="button">Read More</a>
+                <a href="writing1.html">
+                    <img src="https://via.placeholder.com/400" alt="Writing 1">
+                    <h3>Writing Sample 1</h3>
+                    <p>Short description of the writing sample.</p>
+                </a>
             </div>
+            <!-- Writing 2 -->
             <div class="writing-card">
-                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
-                <h3>Article Title</h3>
-                <p>Excerpt from the article...</p>
-                <a href="#" class="button">Read More</a>
+                <a href="writing2.html">
+                    <img src="https://via.placeholder.com/400" alt="Writing 2">
+                    <h3>Writing Sample 2</h3>
+                    <p>Short description of the writing sample.</p>
+                </a>
             </div>
+            <!-- Writing 3 -->
             <div class="writing-card">
-                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
-                <h3>Article Title</h3>
-                <p>Excerpt from the article...</p>
-                <a href="#" class="button">Read More</a>
+                <a href="writing3.html">
+                    <img src="https://via.placeholder.com/400" alt="Writing 3">
+                    <h3>Writing Sample 3</h3>
+                    <p>Short description of the writing sample.</p>
+                </a>
             </div>
+            <!-- Writing 4 -->
             <div class="writing-card">
-                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
-                <h3>Article Title</h3>
-                <p>Excerpt from the article...</p>
-                <a href="#" class="button">Read More</a>
+                <a href="writing4.html">
+                    <img src="https://via.placeholder.com/400" alt="Writing 4">
+                    <h3>Writing Sample 4</h3>
+                    <p>Short description of the writing sample.</p>
+                </a>
             </div>
+            <!-- Writing 5 -->
             <div class="writing-card">
-                <img src="https://via.placeholder.com/400x200" alt="Writing Image">
-                <h3>Article Title</h3>
-                <p>Excerpt from the article...</p>
-                <a href="#" class="button">Read More</a>
+                <a href="writing5.html">
+                    <img src="https://via.placeholder.com/400" alt="Writing 5">
+                    <h3>Writing Sample 5</h3>
+                    <p>Short description of the writing sample.</p>
+                </a>
             </div>
         </div>
     </section>
