--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
                 <a href="project1.html">
                     <img src="https://via.placeholder.com/400" alt="Project 1">
                     <h3>Project 1</h3>
-                    <p>Project 1 description goes here.</p>
+                    <p>Description of Project 1.</p>
                 </a>
             </div>
             <!-- Project 2 -->
@@ -40,7 +40,7 @@
                 <a href="project2.html">
                     <img src="https://via.placeholder.com/400" alt="Project 2">
                     <h3>Project 2</h3>
-                    <p>Project 2 description goes here.</p>
+                    <p>Description of Project 2.</p>
                 </a>
             </div>
             <!-- Project 3 -->
@@ -48,7 +48,7 @@
                 <a href="project3.html">
                     <img src="https://via.placeholder.com/400" alt="Project 3">
                     <h3>Project 3</h3>
-                    <p>Project 3 description goes here.</p>
+                    <p>Description of Project 3.</p>
                 </a>
             </div>
             <!-- Project 4 -->
@@ -56,7 +56,7 @@
                 <a href="project4.html">
                     <img src="https://via.placeholder.com/400" alt="Project 4">
                     <h3>Project 4</h3>
-                    <p>Project 4 description goes here.</p>
+                    <p>Description of Project 4.</p>
                 </a>
             </div>
             <!-- Project 5 -->
@@ -64,7 +64,7 @@
                 <a href="project5.html">
                     <img src="https://via.placeholder.com/400" alt="Project 5">
                     <h3>Project 5</h3>
-                    <p>Project 5 description goes here.</p>
+                    <p>Description of Project 5.</p>
                 </a>
             </div>
         </div>
