--- a/writing.html
+++ b/writing.html
@@ -27,44 +27,44 @@
     <section id="writing">
         <h2>My Writing</h2>
         <div class="writing-grid">
-            <!-- Writing 1 -->
+            <!-- Writing Sample 1 -->
             <div class="writing-card">
                 <a href="writing1.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing 1">
+                    <img src="https://via.placeholder.com/400" alt="Writing Sample 1">
                     <h3>Writing Sample 1</h3>
-                    <p>Short description of the writing sample.</p>
+                    <p>Description of Writing Sample 1.</p>
                 </a>
             </div>
-            <!-- Writing 2 -->
+            <!-- Writing Sample 2 -->
             <div class="writing-card">
                 <a href="writing2.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing 2">
+                    <img src="https://via.placeholder.com/400" alt="Writing Sample 2">
                     <h3>Writing Sample 2</h3>
-                    <p>Short description of the writing sample.</p>
+                    <p>Description of Writing Sample 2.</p>
                 </a>
             </div>
-            <!-- Writing 3 -->
+            <!-- Writing Sample 3 -->
             <div class="writing-card">
                 <a href="writing3.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing 3">
+                    <img src="https://via.placeholder.com/400" alt="Writing Sample 3">
                     <h3>Writing Sample 3</h3>
-                    <p>Short description of the writing sample.</p>
+                    <p>Description of Writing Sample 3.</p>
                 </a>
             </div>
-            <!-- Writing 4 -->
+            <!-- Writing Sample 4 -->
             <div class="writing-card">
                 <a href="writing4.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing 4">
+                    <img src="https://via.placeholder.com/400" alt="Writing Sample 4">
                     <h3>Writing Sample 4</h3>
-                    <p>Short description of the writing sample.</p>
+                    <p>Description of Writing Sample 4.</p>
                 </a>
             </div>
-            <!-- Writing 5 -->
+            <!-- Writing Sample 5 -->
             <div class="writing-card">
                 <a href="writing5.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing 5">
+                    <img src="https://via.placeholder.com/400" alt="Writing Sample 5">
                     <h3>Writing Sample 5</h3>
-                    <p>Short description of the writing sample.</p>
+                    <p>Description of Writing Sample 5.</p>
                 </a>
             </div>
         </div>
