--- a/project2.html
+++ b/project2.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="[Your Name] - Project 2">
+    <title>Project 2 - [Your Name]</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="writing.html">Writing</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Project 2 Details -->
+    <section id="project1">
+        <h2>Project 2: [Project Name]</h2>
+        <div class="project-details">
+            <img src="https://via.placeholder.com/800x400" alt="Project 2">
+            <p>[Detailed description of the project goes here. Discuss the goals, implementation, results, and technologies used.]</p>
+            <p>Technologies used: HTML, CSS, JavaScript, React, Node.js</p>
+            <a href="projects.html" class="back-to-projects">Back to Projects</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
 
