--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of [Your Name] - Designer & Developer">
-    <title>[Your Name] - Portfolio</title>
+    <title>ZB - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -26,15 +26,15 @@
     <!-- Hero Section -->
     <section id="home">
         <div class="hero-content">
-            <h1>Hi, I'm [Your Name]</h1>
-            <p>Crafting seamless digital experiences through design and development.</p>
+            <h1>Hi, I'm ZB </h1>
+            <p>I write simple, concise words aboout sleek and efficient code.</p>
             <button onclick="window.location.href='projects.html'">View My Work</button>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
 
 </body>
