--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of [Your Name] - Designer & Developer">
+    <meta name="description" content="Portfolio of ZB - Technical Writer">
     <title>ZB - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -27,7 +27,7 @@
     <section id="home">
         <div class="hero-content">
             <h1>Hi, I'm ZB </h1>
-            <p>I write simple, concise words aboout sleek and efficient code.</p>
+            <p>I write simple, concise words about sleek and efficient code.</p>
             <button onclick="window.location.href='projects.html'">View My Work</button>
         </div>
     </section>
