--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="[Your Name] - About Me">
-    <title>About - [Your Name]</title>
+    <meta name="description" content="ZB - About Me">
+    <title>About - ZB</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -29,8 +29,8 @@
             <img src="https://via.placeholder.com/200" alt="Your photo" class="about-photo">
             <div class="about-text">
                 <h1>About Me</h1>
-                <p>I'm a passionate designer and developer focused on creating intuitive, engaging digital experiences. I thrive in environments that challenge my creativity and problem-solving skills.</p>
-                <p>When I'm not working, you'll find me reading about the latest in design trends, playing the guitar, or traveling to new places to find inspiration.</p>
+                <p>I'm a passionate writer that enjoys crafting documentation for people to learn from. I take all the technical details and streamline it for a person to read and interact with.</p>
+                <p>When I'm not working, you'll find me reading web novels, sketching buildings, learning something new or visiting a new place.</p>
                 <a href="contact.html" class="button">Get in Touch</a>
             </div>
         </div>
@@ -38,7 +38,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
 
 </body>
