--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of ZB - Technical Writer">
-    <title>ZB - Portfolio</title>
+    <meta name="description" content="ZB - Home">
+    <title>ZB - Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -23,13 +23,11 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Home Section -->
     <section id="home">
-        <div class="hero-content">
-            <h1>Hi, I'm ZB </h1>
-            <p>I write simple, concise words about sleek and efficient code.</p>
-            <button onclick="window.location.href='projects.html'">View My Work</button>
-        </div>
+        <h2>Welcome to My portfolio.</h2>
+        <p>Explore my work, projects, and more!</p>
+        <a href="#" class="btn">Get in Touch</a>
     </section>
 
     <!-- Footer -->
