--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 <h1>About Me</h1>
                 <p>I'm a passionate writer that enjoys crafting documentation for people to learn from. I take all the technical details and streamline it for a person to read and interact with.</p>
                 <p>When I'm not working, you'll find me reading web novels, sketching buildings, learning something new or visiting a new place.</p>
-                <a href="contact.html" class="button">Get in Touch</a>
+                <a href="#" class="btn">Get in Touch</a>
             </div>
         </div>
     </section>
