--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="[Your Name] - Contact">
-    <title>Contact - [Your Name]</title>
+    <meta name="description" content="ZB - Contact">
+    <title>Contact - ZB</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -38,7 +38,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
 
 </body>
