--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="[Your Name] - Projects">
-    <title>Projects - [Your Name]</title>
+    <meta name="description" content="ZB - Projects">
+    <title>My Projects</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -25,7 +25,7 @@
 
     <!-- Projects Section -->
     <section id="projects">
-        <h2>My Projects</h2>
+        <h2>My projects</h2>
         <div class="projects-grid">
             <!-- Project 1 -->
             <div class="project-card">
@@ -72,7 +72,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
 
 </body>
