--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ZB - Home">
-    <title>ZB - Home</title>
+    <meta name="description" content="Home">
+    <title>Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -25,8 +25,8 @@
 
     <!-- Home Section -->
     <section id="home">
-        <h2>Welcome to My portfolio.</h2>
-        <p>Explore my work, projects, and more!</p>
+        <h2>A Word Of Tech.</h2>
+        <p>Simple concise docs for sleek and efficient code.</p>
         <a href="#" class="btn">Get in Touch</a>
     </section>
 
