--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ZB - About Me">
-    <title>About - ZB</title>
+    <title>About me</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="writing.html">Writing</a></li>
+                <li><a href="writing.html">Writings</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -28,7 +28,7 @@
         <div class="about-container">
             <img src="https://via.placeholder.com/200" alt="Your photo" class="about-photo">
             <div class="about-text">
-                <h1>About Me</h1>
+                <h1>About me</h1>
                 <p>I'm a passionate writer that enjoys crafting documentation for people to learn from. I take all the technical details and streamline it for a person to read and interact with.</p>
                 <p>When I'm not working, you'll find me reading web novels, sketching buildings, learning something new or visiting a new place.</p>
                 <a href="#" class="btn">Get in Touch</a>
