--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="writing.html">Writing</a></li>
+                <li><a href="writing.html">Writings</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
