--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="writing.html">Writing</a></li>
+                <li><a href="writing.html">Writings</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -25,7 +25,7 @@
 
     <!-- Contact Section -->
     <section id="contact">
-        <h2>Contact Me</h2>
+        <h2>Contact me</h2>
         <p>If you'd like to collaborate, discuss a project, or just say hello, feel free to reach out!</p>
 
         <form action="#" method="POST">
