--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="home">
         <h2>A Word Of Tech.</h2>
         <p>Simple concise docs for sleek and efficient code.</p>
-        <a href="#contact" class="btn">Get in touch</a>
+        <a href="contact.html" class="btn">Get in touch</a>
     </section>
 
     <!-- Footer -->
