--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <!-- Home Section -->
     <section id="home">
-        <h2>A Word Of Tech.</h2>
-        <p>Simple concise docs for sleek and efficient code.</p>
+        <h2>A Word Of Tech</h2>
+        <p>Writing effective documentation for efficient code.</p>
         <a href="contact.html" class="btn">Get in touch</a>
     </section>
 
