--- a/project2.html
+++ b/project2.html
@@ -30,7 +30,7 @@
             <img src="https://via.placeholder.com/800x400" alt="Project 2">
             <p>[Detailed description of the project goes here. Discuss the goals, implementation, results, and technologies used.]</p>
             <p>Technologies used: HTML, CSS, JavaScript, React, Node.js</p>
-            <a href="projects.html" class="back-to-projects">Back to Projects</a>
+            <a href="projects.html" class="back-to-projects">Back to projects</a>
         </div>
     </section>
 
