--- a/project4.html
+++ b/project4.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="[Your Name] - Project 4">
-    <title>Project 4 - [Your Name]</title>
+    <meta name="description" content="Project 4">
+    <title>Project 4</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -30,13 +30,13 @@
             <img src="https://via.placeholder.com/800x400" alt="Project 4">
             <p>[Detailed description of the project goes here. Discuss the goals, implementation, results, and technologies used.]</p>
             <p>Technologies used: HTML, CSS, JavaScript, React, Node.js</p>
-            <a href="projects.html" class="back-to-projects">Back to Projects</a>
+            <a href="projects.html" class="back-to-projects">Back to projects</a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
 
 </body>
