--- a/project5.html
+++ b/project5.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="[Your Name] - Project 5">
-    <title>Project 5 - [Your Name]</title>
+    <meta name="description" content="Project 5">
+    <title>Project 5</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="writing.html">Writing</a></li>
+                <li><a href="writing.html">Writings</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -30,13 +30,13 @@
             <img src="https://via.placeholder.com/800x400" alt="Project 5">
             <p>[Detailed description of the project goes here. Discuss the goals, implementation, results, and technologies used.]</p>
             <p>Technologies used: HTML, CSS, JavaScript, React, Node.js</p>
-            <a href="projects.html" class="back-to-projects">Back to Projects</a>
+            <a href="projects.html" class="back-to-projects">Back to projects</a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
 
 </body>
