--- a/writing4.html
+++ b/writing4.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="[Your Name] - Writing Sample 4">
-    <title>Writing Sample 4 - [Your Name]</title>
+    <meta name="description" content="Writing Sample 4">
+    <title>Writing Sample 4</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="writing.html">Writing</a></li>
+                <li><a href="writing.html">Writings</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -28,13 +28,13 @@
         <h2>Writing Sample 4: [Writing Title]</h2>
         <div class="writing-details">
             <p>[Full content of writing sample 4 goes here. This could be an essay, article, blog post, or anything you’ve written.]</p>
-            <a href="writing.html" class="back-to-writing">Back to Writing</a>
+            <a href="writing.html" class="back-to-writing">Back to writings</a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
 
 </body>
