--- a/writing.html
+++ b/writing.html
@@ -31,40 +31,40 @@
             <div class="writing-card">
                 <a href="writing1.html">
                     <img src="https://via.placeholder.com/400" alt="Writing Sample 1">
-                    <h3>Writing Sample 1</h3>
-                    <p>Description of Writing Sample 1.</p>
+                    <h3>User Guide</h3>
+                    <p>Explaining how to set up or use products and software.</p>
                 </a>
             </div>
             <!-- Writing Sample 2 -->
             <div class="writing-card">
                 <a href="writing2.html">
                     <img src="https://via.placeholder.com/400" alt="Writing Sample 2">
-                    <h3>Writing Sample 2</h3>
-                    <p>Description of Writing Sample 2.</p>
+                    <h3>API Documentation</h3>
+                    <p>Documenting APIs for developers to harness.</p>
                 </a>
             </div>
             <!-- Writing Sample 3 -->
             <div class="writing-card">
                 <a href="writing3.html">
                     <img src="https://via.placeholder.com/400" alt="Writing Sample 3">
-                    <h3>Writing Sample 3</h3>
-                    <p>Description of Writing Sample 3.</p>
+                    <h3>Technical Tutorials</h3>
+                    <p>Simplfying technical topics.</p>
                 </a>
             </div>
             <!-- Writing Sample 4 -->
             <div class="writing-card">
                 <a href="writing4.html">
                     <img src="https://via.placeholder.com/400" alt="Writing Sample 4">
-                    <h3>Writing Sample 4</h3>
-                    <p>Description of Writing Sample 4.</p>
+                    <h3>Release Notes/Changelog</h3>
+                    <p>Detaling the latest releases and changes.</p>
                 </a>
             </div>
             <!-- Writing Sample 5 -->
             <div class="writing-card">
                 <a href="writing5.html">
                     <img src="https://via.placeholder.com/400" alt="Writing Sample 5">
-                    <h3>Writing Sample 5</h3>
-                    <p>Description of Writing Sample 5.</p>
+                    <h3>Troubleshooting Guides</h3>
+                    <p>Solving issues one step at a time.</p>
                 </a>
             </div>
         </div>
