--- a/writing.html
+++ b/writing.html
@@ -30,7 +30,7 @@
             <!-- Writing Sample 1 -->
             <div class="writing-card">
                 <a href="writing1.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing Sample 1">
+                    <img src="https://images.pexels.com/photos/272980/pexels-photo-272980.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img1">
                     <h3>User Guide</h3>
                     <p>Explaining how to set up or use products and software.</p>
                 </a>
@@ -38,7 +38,7 @@
             <!-- Writing Sample 2 -->
             <div class="writing-card">
                 <a href="writing2.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing Sample 2">
+                    <img src="https://images.pexels.com/photos/276452/pexels-photo-276452.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img2">
                     <h3>API Documentation</h3>
                     <p>Documenting APIs for developers to harness.</p>
                 </a>
@@ -46,7 +46,7 @@
             <!-- Writing Sample 3 -->
             <div class="writing-card">
                 <a href="writing3.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing Sample 3">
+                    <img src="https://images.pexels.com/photos/4160078/pexels-photo-4160078.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img3">
                     <h3>Technical Tutorials</h3>
                     <p>Simplfying technical topics.</p>
                 </a>
@@ -54,15 +54,15 @@
             <!-- Writing Sample 4 -->
             <div class="writing-card">
                 <a href="writing4.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing Sample 4">
-                    <h3>Release Notes/Changelog</h3>
+                    <img src="https://images.pexels.com/photos/19915915/pexels-photo-19915915/free-photo-of-scrabble-letters-spelling-the-word-update-on-a-wooden-table.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img4">
+                    <h3>Release Notes & Changelogs</h3>
                     <p>Detaling the latest releases and changes.</p>
                 </a>
             </div>
             <!-- Writing Sample 5 -->
             <div class="writing-card">
                 <a href="writing5.html">
-                    <img src="https://via.placeholder.com/400" alt="Writing Sample 5">
+                    <img src="https://images.pexels.com/photos/3747159/pexels-photo-3747159.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img5">
                     <h3>Troubleshooting Guides</h3>
                     <p>Solving issues one step at a time.</p>
                 </a>
