--- a/writing.html
+++ b/writing.html
@@ -55,8 +55,8 @@
             <div class="writing-card">
                 <a href="writing4.html">
                     <img src="https://images.pexels.com/photos/19915915/pexels-photo-19915915/free-photo-of-scrabble-letters-spelling-the-word-update-on-a-wooden-table.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img4">
-                    <h3>Release Notes & Changelogs</h3>
-                    <p>Detaling the latest releases and changes.</p>
+                    <h3>Release Notes</h3>
+                    <p>Detaling the latest releases and change logs.</p>
                 </a>
             </div>
             <!-- Writing Sample 5 -->
